--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,5 @@
 [theme]
-primaryColor = "#E694FF"
-backgroundColor = "#00172B"
-secondaryBackgroundColor = "#0083B8"
-textColor = "#DCDCDC"
-font = "sans-serif"
+primaryColor = "#ff0000" # 赤
+backgroundColor="#000000" # 黒
+secondaryBackgroundColor="#696969" # ダークグレー
+textColor="#FFFFFF" # 白
